# PIPEC

./: .gitignore  README.md  base.txt
PIPEC/: CMakeLists.txt  README.md  diagramme_classe.eddx
PIPEC/Documentation/: diagramme_classe.eddx
PIPEC/include/: Admin.hpp  AuthenficationService.hpp  AuthentificationService.hpp  Candidate.hpp  CompanyProfil.hpp  DatabaseManager.hpp  Employer.hpp  JobApplication.hpp  JobOffer.hpp  Notification.hpp  Preference.hpp  UniqueCodeGenerator.hpp  User.hpp
PIPEC/src/: Admin.cpp  AuthentificationService.cpp  CMakeLists.txt  Candidate.cpp  CompanyProfile.cpp  DatabaseManager.cpp  Employer.cpp  Notification.cpp  UniqueCodeGenerator.cpp  User.cpp  jobOffer.cpp
